# embedded-player

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partition_table.csv  sdkconfig  sdkconfigd
components/ssd1306/: font8x8_basic.h  ssd1306_spi.c
main/: CMakeLists.txt  Kconfig.projbuild  Panel.h  Player.h  bt_app.c  bt_app_core.h  exit.c  fs.c  fs.h  idf_component.yml  init.c  main.c  panel.c  player_application.c  test_basic.c
src/: main.c
